[package]
name = "clemento-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
sqlparser = "0.43.1"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "io-util", "io-std", "fs"] }
