[package]
name = "clemento-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bigdecimal = "0.4.2"
sqlparser = {version = "0.43", features = ["bigdecimal"]}
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "io-util", "io-std", "fs"] }
