[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1", features = [
    "io-util",
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
] }
tracing = "0.1"
anyhow = "1"
lsm = { path = "../lsm" }
bincode = { version = "2.0.0-rc.3" }
tokio-util = "0.7.13"
rand = "0.9.0"
