[package]
name = "lsm"
version = "0.1.0"
edition = "2021"

[dependencies]
bloomfilter = { version = "3", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
itertools = "0.14.0"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
rand = "0.8.5"
